--- a/index.html
+++ b/index.html
@@ -483,9 +483,8 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Projects</h1>
 					<h2 class="mb-4">Projects</h2>
-					<p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+					<p>Below are the sample Web development Projects which are build on HTML, CSS, Tailwind CSS, Daisy UI, CSS framework, javascript, DOM , react Js, API</p>
 				</div>
 			</div>
 			<div class="row d-flex">
@@ -642,7 +641,7 @@
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box p-4 text-center">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-map-signs"></span>
+							<img src="images/loc.png" alt="" style="width: 40px;">
 						</div>
 						<h3 class="mb-4">Address</h3>
 						<p>Road #01, Block #H, House #13, Section. #02, Mirpur, Dhaka.</p>
@@ -654,25 +653,26 @@
 							<span class="icon-phone2"></span>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel://0101010101">+88 0168 3493858</a></p>
+						<p><a href="tel://01683493858">+88 0168 3493858</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box p-4 text-center">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-paper-plane"></span>
+							<!-- <span class="icon-paper-plane"></span> -->
+							<img src="images/mail2.png" alt="" style="width: 150px;">
 						</div>
 						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:info@yoursite.com">prantorahaman99@gmail.com</a></p>
+						<p><a href="prantorahaman99@gmail.com">prantorahaman99@gmail.com</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box p-4 text-center">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-globe"></span>
+							<img src="images/file.png" alt="" style="width: 60px; margin-left: 10px;">
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="#">resumelink</a></p>
+						<p><a href="images/about-me.png" download="images/about-me.png">CV</a></p>
 					</div>
 				</div>
 
@@ -688,13 +688,13 @@
 					<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 						<li class="ftco-animate normal-txt">Find me on </li>
-						<li class="ftco-animate"><a href="https://www.linkedin.com/in/adnan-pranto-922b01202/"><span
+						<li class="ftco-animate"><a href="https://www.linkedin.com/in/adnan-pranto-922b01202/" target="_blank"><span
 									class="icon-linkedin"></span></a></li>
-						<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100041507986256"><span
+						<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100041507986256" target="_blank"><span
 									class="icon-facebook"></span></a></li>
-						<li class="ftco-animate"><a href="https://github.com/Adnan-Pranto"><span
+						<li class="ftco-animate"><a href="https://github.com/Adnan-Pranto" target="_blank"><span
 									class="icon-github"></span></a></li>
-						<li class="ftco-animate"><a href="https://web.whatsapp.com/"><span
+						<li class="ftco-animate"><a href="https://web.whatsapp.com/" target="_blank"><span
 									class="icon-whatsapp"></span></a></li>
 					</ul>
 					<br>
