--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 										<div class="about-img">
-											<img src="images/about-me.png" class="img-fluid rounded-circle" alt="">
+											<img src="images/about-me.png" style="width: 260px; height: 180px;"   class="img-fluid rounded-circle" alt="">
 										</div>
 									</div>
 									<!-- Details next to profile image -->
@@ -233,8 +233,8 @@
 									</div>
 								</div>
 
-								<div class="skill-mf">
-									<p class="title-s">Skills</p>
+								<div class="skill-mf"> <br>
+									<h3 class="title-s text-center">Skills</h3>
 									<span>HTML-5</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 90%;"
@@ -484,51 +484,46 @@
 			<div class="row justify-content-center mb-5 pb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h2 class="mb-4">Projects</h2>
+					<div class="underline"></div> <br>
 					<p>Below are the sample Web development Projects which are build on HTML, CSS, Tailwind CSS, Daisy UI, CSS framework, javascript, DOM , react Js, API</p>
 				</div>
 			</div>
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/Adnan-Pranto" class="block-20 zoom-effect"
-							style="background-image: url('images/proj_1.jpg');">
+						<a href="https://adnan-pranto.github.io/Phone-API/" class="block-20 zoom-effect"
+							style="background-image: url('images/pro\ Api.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
-							<h3 class="heading"><a href="https://github.com/Adnan-Pranto">Digital Music Store Data
-									Analysis using SQL</a></h3>
-							<p>Analyzed music store data using advanced SQL queires to identify gaps and increase the
-								business growth.</p>
+							<h3 class="heading"><a href="https://adnan-pranto.github.io/Phone-API">Using API To Create A Side</a></h3>
+							<p class="text-justify">Using API to search different brands products. In click show more button to see products details &amp;its features</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 d-flex ftco-animate">
+				<div class="col-md-4 d-flex ftco-animate ">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+						<a href=" https://adnan-pranto.github.io/small-game-alpha/"
+							class="block-20 zoom-effect" style="background-image: url('images/pro2.png');">
 						</a>
-						<div class="text mt-3 float-right d-block">
+						<div class="text mt-3 float-right d-block ">
 
 							<h3 class="heading"><a
-									href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data
-									Analysis using Python Project for Beginners</a></h3>
-							<p>Performed exploratory data analysis on diwali sales data using Python to improve the
-								customer experience.</p>
+									href=" https://adnan-pranto.github.io/small-game-alpha/" target="_blank">A Puzzle Game Using JavaScript</a></h3>
+							<p class="text-justify">In this gave you need to matching keyboards to solve the screen Alphabet. If it match you got score &amp; play the game.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+						<a href="https://adnan-pranto.github.io/Juce-Bar/"
+							class="block-20 zoom-effect" style="background-image: url('images/pro12.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading"><a
-									href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power
-									BI Sales dashboard Project for Beginners</a></h3>
-							<p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data
-								acorss India.</p>
+									href="https://adnan-pranto.github.io/Juce-Bar/" target="_blank">A Project for Juice Bar Using JS</a></h3>
+							<p class="text-justify">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi..</p>
 						</div>
 					</div>
 				</div>
@@ -538,31 +533,27 @@
 			<div class="row d-flex justify-content-center">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+						<a href="https://adnan-pranto.github.io/hokey-team/"
+							class="block-20 zoom-effect" style="background-image: url('images/pro\ hokey.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading"><a
-									href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast-
-									Time Series Forecasting</a></h3>
-							<p>Used multiple machine learning models to forecast sales (retail store) and performed time
-								series analysis.</p>
+									href="https://adnan-pranto.github.io/hokey-team/" target="_blank">A page for Hokey Champion</a></h3>
+							<p class="text-justify">The National Hockey League was organized at the Windsor Hotel in Montreal on November 26, 1917, after the suspension of.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+						<a href="https://adnan-pranto.github.io/Travel-track/"
+							class="block-20 zoom-effect" style="background-image: url('images/pro\ travel.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading"><a
-									href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer
-									Segmentation using clustering model</a></h3>
-							<p>Developed a ML model to give various recommendations of financial products &amp; services
-								on target customer groups.</p>
+									href="https://adnan-pranto.github.io/Travel-track/" target="_blank">Simple web for Tourist</a></h3>
+							<p class="text-justify">In this using only HTML, CSS &amp; CSS framework. This is also responsive for all device.</p>
 						</div>
 					</div>
 				</div>
@@ -619,7 +610,7 @@
 					<div class="heading">
 						<h4> I love to solve business problems &amp; uncover hidden data stories </h4>
 						<br>
-						<p><a href="https://github.com/Adnan-Pranto" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/Adnan-Pranto?tab=repositories" class="btn btn-primary py-3 px-5" target="_blank">GitHub</a></p>
 					</div>
 				</div>
 			</div>
@@ -633,6 +624,7 @@
 			<div class="row justify-content-center mb-5 pb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h2 class="mb-4">Contact Me</h2>
+					<div class="underline"></div> <br>
 					<p>Below are the details to reach out to me!</p>
 				</div>
 			</div>
@@ -671,8 +663,8 @@
 						<div class="icon d-flex align-items-center justify-content-center">
 							<img src="images/file.png" alt="" style="width: 60px; margin-left: 10px;">
 						</div>
-						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="images/about-me.png" download="images/about-me.png">CV</a></p>
+						<h3 class="mb-4"><a href="file/Adnan_Pranto.pdf" download="file/Adnan_Pranto.pdf">Download Resume</a> </h3>
+						<p><a href="file/Adnan_Pranto.pdf" download="file/Adnan_Pranto.pdf" >CV</a></p>
 					</div>
 				</div>
 
