--- a/index.html
+++ b/index.html
@@ -673,8 +673,8 @@
 					<br>
 					<div class="row justify-content-center">
 						<div class="col-md-7 ftco-animate text-center">
-							<h2>Have a<span> Question? </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77"
-									class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+							<h2>Have a<span> Question? </span> <a href="https://docs.google.com/forms/d/e/1FAIpQLScl66396T86ps5vHUs9penVN-kzLh677t6SRIHy7c0fAtFviw/viewform?usp=sf_link"
+									class="btn btn-primary py-3 px-5" target="_blank">Click Here</a> </h2>
 						</div>
 					</div>
 					<br>
