--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 						<span class="date">15 August, 2023 – 30 December, 2023</span>
 						<h2>PHP/React (With BDR & SRS)</h2>
 						<span class="position">Internship</span>
-						<p class="mt-4 text-justify">In <a href="https://www.goinnovior.com">Goinnovior LTD</a>I learn their Front End. After ending my Internship, our CEO sir involve a live project. I work with direct client.
+						<p class="mt-4 text-justify">In <a href="https://www.goinnovior.com">Goinnovior LTD</a>, I learn their Front End. After ending my Internship, our CEO sir involve a live project. I work with direct client.
 							<br> 
 							I also was a part of a software which was Medical Tourism. Me &amp; my tem do full BRD (Business Requirements Document) and SRS (Software Requirements Specification) for development team
 							In this course I complete many projects. <br>
@@ -443,7 +443,7 @@
 			<div class="row d-md-flex justify-content-center ">
 				<div class="col-md-6 zoom-effect">
 					<div class="resume-wrap ftco-animate border border-info">
-						<span class="date">2018-2012</span>
+						<span class="date">2018-2022</span>
 						<h2>Bachelor of Computer Science &amp; Engineering</h2>
 						<span class="position">Daffodil International University</span>
 						<p class="mt-4">CGPA: 3.41 out of 4.00</p>
@@ -560,6 +560,8 @@
 			</div>
 		</div>
 	</section>
+
+
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
 		<div class="container">
